# novel-creator

./: .gitignore  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-review-gate.yml
.memsearch/memory/: 2026-02-20.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: ai_schemas.py  bible.py  export.py  generation.py  kg.py  lorebook.py  projects.py  qa.py  schemas.py  summary.py
backend/app/core/: config.py  database.py  events.py  llm.py
backend/app/models/: __init__.py  tables.py
backend/app/services/: consistency.py  context_pack.py  graph_service.py  kg_extraction.py  lorebook.py  summary.py  text_utils.py  word_count.py
backend/tests/: conftest.py  test_bible.py  test_consistency.py  test_context_pack.py  test_export.py  test_generation.py  test_health.py  test_kg.py  test_lorebook.py  test_projects.py  test_summary.py  test_word_count.py
docs/: novel_ai_platform_local_web_spec_v0.1.md
docs/dr-workflow/novel-ai-platform/: manifest.json
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: bible-panel.tsx  export-panel.tsx  generate-panel.tsx  kg-panel.tsx  lore-panel.tsx  project-tree.tsx  scene-editor.tsx  summary-panel.tsx
frontend/src/hooks/: use-workspace.ts
frontend/src/lib/: api.ts  types.ts
openspec/: project.md
openspec/changes/add-mvp-alpha/: design.md  proposal.md  tasks.md
test/: README.md  test-api.md  test-e2e-flow.md  test-ui.md
(+48 files in other folders)
